# spacesim

./: Cargo.toml
src/: main.rs  physics_plugin.rs  quadtree.rs
